# Bower

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml  run-openai-server.cmd  run-relay-server.cmd  run-web.cmd  turbo.json
.superset/: config.json
apps/server/: .env.example  pyproject.toml
apps/server/app/: errors.py  main.py
apps/server/app/api/routes/: account.py  boards.py  image_analysis.py  inspirations.py  settings_ai.py  settings_preferences.py
apps/server/app/db/: sqlite.py
apps/server/app/models/: inspiration.py
apps/server/app/schemas/: account.py  ai_settings.py  board.py  image_analysis.py  inspiration.py  preferences.py
apps/server/app/services/: account.py  ai_settings.py  boards.py  image_analysis.py  inspirations.py  preferences.py
apps/server/app/storage/: local_files.py
apps/server/tests/: test_account_api.py  test_ai_settings_api.py  test_image_analysis.py  test_inspirations_api.py
apps/web/: package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: ai-settings-form.tsx  icons.tsx  inspiration-actions.tsx  settings-client.tsx  upload-form.tsx  (+1 more)
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
docs/: Architecture.md  Backlog.md  DesignSystem.md
docs/QA/: mvp-v1-openai-smoke-2026-03-28.md  mvp-v1-smoke-checklist.md  pr-2-review-guide.md
docs/REPORTS/: mvp-v1-foundation-checkpoint-2026-03-28.md
docs/TASKS/: mvp-v1-foundation-build-spec.md  official-ai-provider-settings.md
scripts/: dev.mjs
(+31 files in other folders)
