[project]
name = "bower-server"
version = "0.1.0"
description = "Bower MVP foundation FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "bcrypt>=4.3.0",
  "email-validator>=2.2.0",
  "fastapi>=0.115.12",
  "pyjwt>=2.10.1",
  "python-multipart>=0.0.20",
  "pydantic>=2.11.3",
  "uvicorn>=0.34.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
